# keyspeak

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  TERMS.md
.github/workflows/: ci.yml  release.yml
assets/: KeySpeak.icns  icon_30.rgba  icon_32.rgba  icon_36.rgba  icon_44.rgba
scripts/: build-dmg.sh  uninstall.sh
src/: audio.rs  corrections.rs  icons.rs  lib.rs  main.rs  overlay.rs  permissions.rs  settings.rs  settings_bin.rs  settings_ui.rs  transcribe.rs  typer.rs
tests/: corrections_test.rs  settings_test.rs
